Macro/skim/logs/19545448_17.err
input_line_9:2:37: error: expected expression
 FlatMix(17*100000, (17+1)*100000-1,) /* '.x' tries to invoke a function with the same name as the macro */
                                    ^
